# deepeval-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_file.py
.deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: regression.yml
